<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coniel - GAO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ajustes</string>
    <string name="lbInicio">Inicio de Sesión</string>
    <string name="lblusuario">Usuario:</string>
    <string name="txtusuario"></string>
    <string name="lblContrasenia">Contraseña:</string>
    <string name="txtcontrasenia"></string>
    <string name="contrasenia">Clave</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="btnInicioSesion">Entrar</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash">splash</string>
    <string name="title_activity_menu">Menu </string>
    <string name="lblautor"> GAO - Coniel V1.0 2014</string>
    <string name="btningresarficha"> Actividades </string>
    <string name="btnbusqueda"> Buscar </string>
    <string name="btnfoto">Fotos</string>
    <string name="btnLocalizacion">Ubicación</string>
    <string name="btnChat">Chat</string>
    <string name="btnAjustes">Ajustes</string>
    <string name="btnmenufilter"></string>
    <string name="title_activity_navegacion">Navegacion</string>
    <string name="action_example">Navegación</string>
    <string name="cuenta">Cuenta</string>
    <string name="nombre">Abonado</string>
    <string name="ruCi">Ruc / Cédula</string>
    <string name="geo">Geocódigo</string>
    <string name="direccion">Dirección</string>
    <string name="interseccion">Intersección</string>
    <string name="urbanizacion">Urbanización</string>
    <string name="estado">Estado</string>
    <string name="deuda">Deuda</string>
    <string name="mesesDeuda">Meses Adeudados</string>
    <string name="numFabrica">Número de Fabrica</string>
    <string name="numSerie">Número de Serie</string>
    <string name="tipoMedidor">Tipo de Medidor</string>
    <string name="tecnologia">Tecnología</string>
    <string name="tensión">Tensión</string>
    <string name="amperaje">Amperaje</string>
    <string name="fases">Fases</string>
    <string name="hilos">Hilos</string>
    <string name="digitos">Digitos</string>
    <string name="fechaInst">Fecha/Inst.</string>
    <string name="lecturaInst">Lectura/Inst.</string>
    <string name="fechaDesinst">Fecha/Desinst.</string>
    <string name="lecturaDesinst">Lectura/Desinst.</string>
    <string name="strTomaFoto">Capturar</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="titulo">Ingrese los Datos</string>
    <string name="dato">Cuenta</string>
    <string name="textoBoton2">Borrar</string>
    <string name="textoBoton">Nuevo</string>
    <string name="tituloApp"> Fotos de Campo </string>
    <string name="title_activity_lista_galeria_diaria">ListaGaleriaDiaria</string>
    <string name="title_activity_principal">Control de Fotos de Campo</string>
    <string name="title_activity_cuentas">Cuentas</string>
    <string name="title_activity_galeria">Galeria</string>
    <string name="textibtnagregar">Agregar</string>
    <string name="textobtnEliminar">Eliminar</string>
    <string name="textactualizargeo">Cambiar Ubicación</string>
    <string name="tiposolicitud">Tipo de Solicitud</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="instalador">Instalador</string>
    <string name="cuadrilla">Cuadrilla</string>
    <string name="enbodega">En bodega</string>
    <string name="fabricainst">Fabrica</string>
    <string name="serialins">Serial</string>
    <string name="marca">Marca</string>
    <string name="tipo">Tipo</string>
    <string name="lectura">Lectura</string>
    <string name="materialRed">Material de la Red</string>
    <string name="formaConexion">Forma de Conexión</string>
    <string name="estadoInstalacion">Estado de Instalación</string>
    <string name="tipoConstruccion">Tipo de Construcción</string>
    <string name="ubicaciónMedidor">Ubicación del Medidor</string>
    <string name="tipoAcometida">Tipo de Acometida</string>
    <string name="calibreRed">Calibre de Red</string>
    <string name="usoEnergia">Uso de Energía</string>
    <string name="claseRed">Clase de Red</string>
    <string name="tipoServicio">Tipo de Servicio</string>
    <string name="usoInmueble">Uso del Inmueble</string>
    <string name="demando">Demanda</string>
    <string name="nivel">Nivel Socioeconómico</string>
    <string name="materiales">Materiales</string>
    <string name="cant">Cantidad</string>
    <string name="reubicacion">Reubicación</string>
    <string name="contrastacion">Contrastación</string>
    <string name="directo">Directo</string>
    <string name="ubicacion">Ubicación</string>
    <string name="cuentalista">Cta.</string>
    <string name="nombrelista">Nombre</string>
    <string name="tipolista">Solicitud</string>
    <string name="numerolista">Medidor</string>
    <string name="temalista">Actividades de Hoy</string>




    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="tab1">Ingreso</string>
    <string name="title_activity_contenedor"> Coniel - GAO </string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nombres de los items -->
    <string-array name="nav_drawer_items">
        <item>Menu</item>
        <item>Ingresar</item>
        <item>Buscar</item>
        <item>Fotos</item>
        <item>Ubicación</item>
        <item>Acerca de</item>
        <item>Salir</item>
    </string-array>

    <!-- Iconos de los items -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_action_copy</item>
        <item>@drawable/ic_action_search</item>
        <item>@drawable/ic_action_camera</item>
        <item>@drawable/ic_action_place</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_undo</item>
    </array>

    <string name="title_activity_buscar">Buscar</string>
-                       <string name="title_activity_contenedor_busqueda">ContenedorBusqueda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_busqueda_datos_abonado">BusquedaDatosAbonado</string>
    <string name="title_activity_busqueda_datos_medidor">BusquedaDatosMedidor</string>
    <string name="title_activity_ingreso">Ingreso</string>
    <string name="acerca">Acerca de</string>
    <string name="salir">Salir</string>

    <string-array name="spinnerbusqueda">
        <item>Cuenta</item>
        <item>Medidor</item>
        <item>Nombre</item>
        <item>Geocodigo</item>
    </string-array>
    <string-array name="solicitudes">
        <item>Cambio de Materiales</item>
        <item>Cambio de Medidor</item>
        <item>Servicio Nuevo</item>
    </string-array>

    <string name="title_activity_ingreso_actividad_instalador">IngresoActividadInstalador</string>
    <string name="title_activity_ingreso_medidor_instalado">IngresoMedidorInstalado</string>
    <string name="title_activity_ingreso_materiales">IngresoMateriales</string>
    <string name="title_activity_ingresos_referencias">IngresosReferencias</string>
    <string name="title_activity_lista_actividades">ListaActividades</string>

</resources>
