<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gao.coniel.coniel_gao.BusquedaDatosAbonado"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cuenta"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtcuenta"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/nombre"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtnombre"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/ruCi"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtCiRuc"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/geo"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtGeocodigo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/direccion"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtDireccion"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/interseccion"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtInterseccion"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/urbanizacion"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtUrbanizacion"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/estado"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtEstado"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/deuda"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtDeuda"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/mesesDeuda"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtMesDeuda"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextCuenta" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextAbonado" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextCedulaRuc" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextGeocodigo" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextDireccion" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextInterseccion" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextUrbanizacion" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextEstado" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextDeuda"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextMesDeuda"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>
